Common:20251125:SVM:optimized home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="str_home_screen_title">Emotional App</string>
     <string name="str_home_screen_floating_btn_title">Add user button</string>
     <string name="str_home_screen_center_btn">Center button</string>
+    <string name="str_home_screen_add_user_btn">Add User</string>
+    <string name="str_home_screen_user_name_text">User name</string>
+    <string name="str_home_screen_email_text">Email</string>
 
 </resources>
